# rust-simple-blog-api

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml
.docker/: .env  Dockerfile  docker-compose.yml
.github/: README.md
migrations/2023-01-03-181739_create_blog/: down.sql  up.sql
src/: app.rs  main.rs
src/api/: mod.rs
src/api/routes/: auth.rs  blog.rs  blog_test.rs  healtcheck.rs  mod.rs
src/api/serializers/: mod.rs
src/db/: mod.rs  schema.rs  test_db.rs
src/models/: blog.rs  user.rs
src/service/: auth_service.rs  blog_service.rs  mod.rs
src/tests/api/: blog_test.rs  mod.rs
src/utils/: connection.rs  error.rs  hash.rs  mod.rs  response.rs  token.rs
