[package]
name = "rust-simple-blog-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10.0"
diesel = { version = "2.1.4", features = ["r2d2", "sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.1.0"
dotenvy = "0.15"
thiserror = "1.0"
url = "2.3.1"
dotenv = "0.15.0"
derive_more = "0.99.17"
validator = "0.16.1"
validator_derive = "0.16.0"
actix-service = "2.0.2"
actix-http = "3.4.0"

[dev-dependencies]
rstest = "0.16.0"
